--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "beryldb",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "NodeJS official client for BerylDB",
-  "main": "test.js",
+  "main": "connection.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/beryldb/node-beryl.git"
