--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/beryldb/node-beryl.git"
-  },  
+  },
   "scripts": {
     "test": ""
   },
@@ -14,5 +14,7 @@
     "name": "Carlos Ferry",
     "email": "cferry@beryldb.com"
   },
-  "license": "BSD-3"
+  "license": "BSD-3",
+  "dependencies": {
+  }
 }
