--- a/package.json
+++ b/package.json
@@ -14,7 +14,5 @@
     "name": "Carlos Ferry",
     "email": "cferry@beryldb.com"
   },
-  "license": "BSD-3",
-  "dependencies": {
-  }
+  "license": "BSD-3"
 }
